--- a/style.css
+++ b/style.css
@@ -19,7 +19,10 @@
   }
 
   .cap{
-    font-family: fantasy;
+    font-family: serif;
+    font-style: italic;
+    font-size: 50px;
+    
   }
   
    
